# workforce-dev

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  wsgi.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
devhub/: __main__.py  app.py  auth.py  cli.py  config.py  extensions.py  models.py  package_validator.py  scanner.py  script_runner.py  search.py  seed.py
devhub/data/: copilot_templates.py
devhub/routes/: admin.py  api.py  copilot_task_builder.py  dashboard.py  docs.py  main.py  packages.py  progress.py  projects.py  reports.py  scripts.py
devhub/services/: copilot_task_builder.py
devhub/templates/: _ui.html  base.html  index.html  login.html
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  PACKAGE_MANIFEST_SPEC.md  PYTHONANYWHERE_DEPLOYMENT.md  PythonAnywhere_deployment.md  README.md  SCAN_CONFIGURATION_GUIDE.md  SCRIPT_LIBRARY_SPEC.md  SECURITY_MODEL.md
docs/planning/: README.md  WORKFORCE_CONSOLIDATED_MASTER_PLAN_2026-04-17.md
migrations/versions/: 2fc55785abba_initial.py
sample_packages/: README.md
scripts/admin/: pa_inventory.sh
tests/: conftest.py  helpers.py  test_api.py  test_app.py  test_auth.py  test_cli_scan.py  test_config.py  test_copilot_task_builder.py  test_docs.py  test_models.py  test_package_validator.py  test_packages.py  test_progress.py  test_read_route_auth.py  test_rendered_auth.py  test_routes.py  test_scanner.py  test_scripts.py  test_search.py  test_ui.py
workforce_devhub/: __init__.py  config.py  extensions.py
workforce_devhub/cli/: commands.py
workforce_devhub/seed/: data.py
(+93 files in other folders)
