[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "workforce-devhub"
version = "1.0.0"
description = "Workforce Developer Hub - centralized project management and tooling"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.0",
    "Flask-Migrate>=4.0.0",
    "Flask-Login>=0.6.0",
    "Flask-WTF>=1.2.0",
    "WTForms>=3.1.0",
    "email-validator>=2.1.0",
    "Werkzeug>=3.0.0",
    "alembic>=1.13.0",
    "SQLAlchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
